# tps55288-rs

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  TODO.md  dprint.json  lefthook.yml  package.json
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: development.md  tps55288-datasheet.md
downloads/6ae7d7df-dbe7-458d-acfd-77790fa4a732/b600788c-2136-4962-bc8c-ccc8205767b0/: 5e7b00f9-711b-4c4a-b6c6-4874179a938b_content_list.json  full.md
examples/esp32s3fh4n2/: Cargo.toml  Makefile  README.md
examples/esp32s3fh4n2/.cargo/: config.toml
examples/stm32g031g8u6/: Cargo.toml  Makefile  README.md
examples/stm32g031g8u6/.cargo/: config.toml
examples/stm32g031g8u6/src/: lib.rs
scripts/: select-probe.sh
src/: data_types.rs  driver.rs  error.rs  lib.rs  registers.rs
tests/: conversions.rs  driver_mock.rs  status_and_fields.rs
