[package]
name = "tps55288-stm32g031g8u6"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1"
tps55288-rs = { path = "../..", features = ["defmt"] }

[target.thumbv6m-none-eabi.dependencies]
stm32g0xx-hal = { version = "0.2", features = ["stm32g031", "rt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
opt-level = 1
[features]
default = []
hw = []
