[package]
name = "tps55288-stm32g031g8u6"
version = "0.1.0"
edition = "2021"
autobins = false

[features]
default = []
hw = [
    "embassy-stm32",
    "embassy-executor",
    "embassy-time",
    "defmt",
    "defmt-rtt",
    "embedded-hal-async",
    "tps55288-rs/defmt",
    "tps55288-rs/async",
    "panic-probe",
]


[dependencies]
tps55288-rs = { path = "../.." }
embedded-hal = "1"

# Embassy stack (only used when feature "hw" is enabled)
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "94f9b2707486ca3eade5bf4b237edf3d6aa90f35", optional = true, features = ["executor-thread", "arch-cortex-m", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "94f9b2707486ca3eade5bf4b237edf3d6aa90f35", optional = true, features = ["defmt", "tick-hz-32_768"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "94f9b2707486ca3eade5bf4b237edf3d6aa90f35", optional = true, features = [
    "stm32g031g8",
    "time-driver-any",
    "exti",
    "defmt",
    "time",
    "unstable-pac",
    "memory-x",
    "rt",
] }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", optional = true, features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal-async = { version = "1.0.0", optional = true }
portable-atomic = { version = "1.7", features = ["critical-section"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "step_vout"
path = "src/bin/step_vout.rs"
required-features = ["hw"]

[[bin]]
name = "fixed_5v"
path = "src/bin/fixed_5v.rs"
required-features = ["hw"]

[[bin]]
name = "ext_fb_sw2303"
path = "src/bin/ext_fb_sw2303.rs"
required-features = ["hw"]
